<resources>
    <string name="app_name">chessClock</string>
    <string name="settings_button">settings_button</string>
    <string name="pause_button">pause button</string>
    <string name="refresh_button">refresh button</string>
    <string name="done">done!</string>
    <string name="no_controls">No controls yet</string>
    <string name="add">Add</string>
    <string name="add_name">Add Name</string>
    <string name="time">Time</string>
    <string name="increment">Increment</string>
    <string name="click_to_enter_time">click to enter time</string>
    <string name="click_to_enter_increment">click to enter increment</string>
    <string name="save">save</string>
    <string name="select_mode">Select Mode</string>
    <string name="bronstein">Bronstein</string>
    <string name="delay">Delay</string>
    <string name="fischer">Fischer</string>
    <string name="select">SELECT</string>
    <string name="update">update</string>
</resources>
