<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTimeActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/add_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/add_time" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:text="@string/time"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        style="@style/add_time" />

    <TextView
        android:id="@+id/tv_entertime"
        android:layout_width="match_parent"
        android:hint="@string/click_to_enter_time"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_time"
        style="@style/add_time" />

    <TextView
        android:id="@+id/tv_increment"
        android:layout_width="match_parent"
        android:text="@string/increment"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_entertime"
        style="@style/add_time" />

    <TextView
        android:id="@+id/tv_enter_increment"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:hint="@string/click_to_enter_increment"
        app:layout_constraintTop_toBottomOf="@id/tv_increment"
        style="@style/add_time" />
    <TextView
        android:id="@+id/tv_mode"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:text="@string/select_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_increment"
        style="@style/add_time" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        style="@style/add_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mode">

        <RadioButton
            android:id="@+id/bronstein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/bronstein"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/delay"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/fischer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/fischer"
            android:layout_marginBottom="8dp"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>