<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playerOne"
        android:onClick="clickone"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/timeTextView" />


    <ImageView
        android:id="@+id/settings"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/settings_button"
        android:onClick="settingsclicked"
        app:layout_constraintBottom_toTopOf="@id/playerTwo"
        app:layout_constraintEnd_toStartOf="@+id/pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerOne"
        app:srcCompat="@drawable/ic_action_settings"
        style="@style/imageViewStyle" />

    <ImageView
        android:id="@+id/pause"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/pause_button"
        android:visibility="invisible"
        android:onClick="pauseclicked"
        app:layout_constraintBottom_toTopOf="@id/playerTwo"
        app:layout_constraintEnd_toStartOf="@+id/refresh"
        app:layout_constraintStart_toEndOf="@id/settings"
        app:layout_constraintTop_toBottomOf="@id/playerOne"
        app:srcCompat="@drawable/ic_action_pause"
        style="@style/imageViewStyle" />

    <ImageView
        android:id="@+id/refresh"
        android:contentDescription="@string/refresh_button"
        android:onClick="refreshclicked"
        app:layout_constraintBottom_toTopOf="@id/playerTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pause"
        app:layout_constraintTop_toBottomOf="@id/playerOne"
        app:srcCompat="@drawable/ic_action_refresh"
        style="@style/imageViewStyle" />


    <TextView
        android:id="@+id/playerTwo"
        android:onClick="clickTwo"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pause"
        style="@style/timeTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>